feat: external API for plugin communications + second audit fixes
External API:
- OmniBridgeAPI: static entry point with getInstance()/isAvailable()
- ManagedPlugin record: name, displayName, type, installed, enabled, version, dependencies
- PlayerPlatformInfo record: uuid, name, protocolVersion, bedrockPlayer, bedrockPlatform
- Events: PluginInstalledEvent, PluginUpdatedEvent, PluginRemovedEvent (Bukkit events)
- API methods: getManagedPlugins(), getPlugin(), getPlayerInfo(), getOnlinePlayerInfo()
- API actions: installPlugin(), updatePlugin(), removePlugin()

Usage by external plugins:
  OmniBridgeAPI api = OmniBridgeAPI.getInstance();
  Map<String, ManagedPlugin> plugins = api.getManagedPlugins();
  PlayerPlatformInfo info = api.getPlayerInfo(player.getUniqueId());
  Bukkit.getPluginManager().registerEvents(new MyListener(), this);

Audit fixes:
- onEnable() now runs install/update async (no more main thread blocking)
- ConfigManager: removed dead getConfigDirectory() method
- Repository: Collections.unmodifiableMap() instead of Map.copyOf() for clarity
- DownloadService: Files.newInputStream() instead of inline FileInputStream FQCN
- API init/shutdown lifecycle managed by OmniBridge onEnable/onDisable